# joy

./: .gitignore  .markdownlint.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
.claude/: CLAUDE.md
.claude/commands/: joy.md
.claude/skills/joy/: SKILL.md
.github/workflows/: ci.yaml  publish.yml
.joy/: config.defaults.yaml  config.yaml  project.yaml
.joy/ai/: instructions.md  manifest.yaml
.joy/hooks/: commit-msg
.joy/items/: EP-0001-core-cli.yaml  EP-0002-terminal-output-and-ux.yaml  EP-0003-ai-integration.yaml  EP-0004-tui.yaml  EP-0005-sync-and-server.yaml  EP-0006-web-ui-and-portal.yaml  IT-0001-joy-init-project-initialization.yaml  IT-0002-joy-add-create-items-interactively.yaml  IT-0003-joy-ls-list-and-filter-items.yaml  IT-0004-joy-status-change-item-status.yaml  IT-0005-joy-board-overview.yaml  IT-0006-joy-edit-modify-existing-items.yaml  IT-0007-joy-rm-delete-items.yaml  IT-0008-joy-show-item-detail-view.yaml  IT-0009-joy-deps-dependency-management.yaml  IT-000A-joy-milestone-milestone-management.yaml  IT-000B-joy-log-change-history.yaml  IT-000C-joy-project-view-and-edit-project.yaml  IT-000D-joy-completions-shell-completion.yaml  IT-000E-semantic-color-scheme-for-terminal.yaml  IT-000F-emoji-indicators-for-item-types-and.yaml  IT-0010-output-format-configuration-in-config.yaml  IT-0011-compact-table-formatting-for-joy-ls.yaml  IT-0012-joy-ai-setup-tool-and-model.yaml  IT-0013-joy-ai-estimate-effort-and-cost.yaml  IT-0014-joy-ai-plan-break-epic-into-items.yaml  IT-0015-joy-ai-implement-dispatch-to-external.yaml  IT-0016-joy-ai-review-automated-code-review.yaml  IT-0017-joy-ai-status-monitor-ai-jobs.yaml  IT-0018-ai-cost-tracking-and-job-logging.yaml  IT-0019-status-intelligence-from-git-activity.yaml  IT-001A-joy-app-basic-board-view.yaml  IT-001B-tui-item-detail-panel.yaml  IT-001C-tui-dependency-tree-view.yaml  IT-001D-joy-serve-http-server-with-rest-api.yaml  IT-001E-joy-sync-push-and-pull.yaml  IT-001F-joy-clone-clone-project-from-remote.yaml  IT-0020-client-side-encryption-for-synced-data.yaml  IT-0021-oauth-authentication-with-github-and.yaml  IT-0022-web-frontend-scaffolding-with-solidjs.yaml  (+451 more)
.joy/milestones/: JOY-MS-01-first-external-user.yaml  JOY-MS-01-phase-0-1-dogfood-ready-cli.yaml  JOY-MS-02-ai-tool-mode.yaml  JOY-MS-02-production-ready.yaml  JOY-MS-03-enterprise-features.yaml  JOY-MS-03-sync-and-server.yaml  JOY-MS-04-web-ui-and-portal.yaml  JOY-MS-05-ai-agent-mode.yaml  JOY-MS-06-tui-and-native-apps.yaml  JOY-MS-06-tui.yaml  MS-01-phase-0-1-dogfood-ready-cli.yaml
.joy/releases/: JOY-v0.10.0.yaml  JOY-v0.10.1.yaml  JOY-v0.10.2.yaml  JOY-v0.10.3.yaml  JOY-v0.10.4.yaml  JOY-v0.10.5.yaml  JOY-v0.10.6.yaml  JOY-v0.11.0.yaml  JOY-v0.11.1.yaml  JOY-v0.12.0.yaml  JOY-v0.3.2.yaml  JOY-v0.3.3.yaml  JOY-v0.3.4.yaml  JOY-v0.3.5.yaml  JOY-v0.3.6.yaml  JOY-v0.4.0.yaml  JOY-v0.4.1.yaml  JOY-v0.5.0.yaml  JOY-v0.6.0.yaml  JOY-v0.7.0.yaml  JOY-v0.8.0.yaml  JOY-v0.8.1.yaml  JOY-v0.8.2.yaml  JOY-v0.8.3.yaml  JOY-v0.8.4.yaml  JOY-v0.9.0.yaml
app/: LICENSE  justfile  package.json
app/src-tauri/: Cargo.toml  justfile
app/src-tauri/src/: main.rs
crates/: justfile
crates/joy-ai/: Cargo.toml  README.md  justfile
crates/joy-ai/src/: lib.rs
crates/joy-cli/: Cargo.toml  README.md  justfile
crates/joy-cli/docs/: Tutorial.md
crates/joy-cli/src/: color.rs  complete.rs  forge.rs  main.rs  prompt.rs  version_bump.rs
crates/joy-cli/src/commands/: add.rs  ai.rs  assign.rs  auth.rs  board.rs  comment.rs  completions.rs  config.rs  deauth.rs  deps.rs  edit.rs  filter_args.rs  find.rs  init.rs  log.rs  ls.rs  milestone.rs  mod.rs  project.rs  release.rs  rm.rs  show.rs  status.rs  tutorial.rs
crates/joy-cli/tests/: cmd.rs
crates/joy-cli/tests/cmd/: help.toml  version.toml
crates/joy-core/: Cargo.toml  README.md  justfile
crates/joy-core/data/: config.defaults.yaml
crates/joy-core/data/ai/agents/: designer.yaml  documenter.yaml  planner.yaml
crates/joy-core/data/fortunes/: humor.yaml  science.yaml  tech.yaml
crates/joy-core/data/hooks/: commit-msg
crates/joy-core/data/items/: _base.yaml  bug.yaml  rework.yaml  story.yaml  task.yaml
crates/joy-core/data/process/: workflow.yaml
crates/joy-core/src/: ai_manifest.rs  ai_templates.rs  capabilities.rs  context.rs  embedded.rs  error.rs  event_log.rs  filter.rs  fortune.rs  git_ops.rs  guard.rs  identity.rs  init.rs  items.rs  lib.rs  milestones.rs  releases.rs  security_md.rs  store.rs  templates.rs  vcs.rs
crates/joy-core/src/auth/: attestation.rs  consumed.rs  delegation.rs  derive.rs  mod.rs  otp.rs  session.rs  sign.rs  token.rs
crates/joy-core/src/migrations/: mod.rs
crates/joy-core/src/migrations/project_yaml/: m_2026_04_rename_auth_fields.rs  mod.rs
crates/joy-core/src/model/: config.rs  item.rs  milestone.rs  mod.rs  project.rs  release.rs
crates/joy-core/src/model/snapshots/: joy_core__model__config__tests__default_config_snapshot.snap  joy_core__model__item__tests__item_snapshot.snap
crates/joy-core/templates/: SECURITY.md
crates/joy-core/templates/ai/: instructions.md
crates/joy-core/templates/ai/instructions/: setup.md
crates/joy-core/templates/ai/skills/joy/: SKILL.md
crates/joy-core/templates/ai/tools/claude-code/: agent.md
crates/joy-core/templates/ai/tools/github-copilot/prompts/: joy.prompt.md
crates/joy-core/templates/ai/tools/mistral-vibe/: agent.toml
data/: config.defaults.yaml  project.defaults.yaml
data/ai/: instructions.md  joy-block.md
data/ai/agents/: conceiver.yaml  implementer.yaml  reviewer.yaml  tester.yaml
data/items/: _base.yaml  decision.yaml  epic.yaml  idea.yaml
docs/dev/: Architecture.md  Backlog.md  CONTRIBUTING.md  Vision.md
docs/dev/adr/: ADR-001-yaml-over-sqlite.md  (+9 more)
docs/user/: Tutorial.md
examples/: import-backlog.sh
examples/demo-project/: .gitignore
templates/ai/: instructions.md  joy-block.md
templates/docs/: CONTRIBUTING.md
tests/integration/: ai.bats  attestation.bats  auth.bats  auto_git.bats  basic.bats  guard.bats  identity.bats  modes.bats  setup.bash  traceability.bats
(+116 files in other folders)
