[package]
name = "joy-app"
version = "0.2.0"
edition = "2021"
license = "LicenseRef-Commercial"

[dependencies]
joy-core = { path = "../../crates/joy-core" }
joy-ai = { path = "../../crates/joy-ai" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2.10", features = [] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
