[package]
name = "joy-ai"
version = "0.10.6"
edition = "2021"
license = "MIT"
description = "AI integration layer for Joy product management"
repository = "https://github.com/joyint/joy"
homepage = "https://joyint.com/en/joy"
readme = "README.md"

[dependencies]
joy-core = { version = "0.10.6", path = "../joy-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
