[package]
name = "joy-core"
version = "0.3.2"
edition = "2021"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10.9"

[dev-dependencies]
insta = { version = "1.41", features = ["yaml"] }
tempfile = "3"
