[package]
name = "joy-core"
version = "0.4.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10.9"
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
hex = "0.4"
base64ct = { version = "1", features = ["alloc"] }
minijinja = { workspace = true }

[dev-dependencies]
insta = { version = "1.41", features = ["yaml"] }
tempfile = "3"
