[package]
name = "joy-core"
version = "0.10.6"
edition = "2021"
license = "MIT"
description = "Core library for Joy product management - Git-native, terminal-first"
repository = "https://github.com/joyint/joy"
homepage = "https://joyint.com/en/joy"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10.9"
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
hex = "0.4"
base64ct = { version = "1", features = ["alloc"] }
uuid = { version = "1", features = ["v4", "serde"] }
minijinja = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
fast-kdf = []   # Use minimal Argon2id params (for testing only, NOT secure)

[dev-dependencies]
insta = { version = "1.41", features = ["yaml"] }
tempfile = "3"
